--- a/ch10/ch10_example21.html
+++ b/ch10/ch10_example21.html
@@ -34,6 +34,64 @@
             <div id="box1" draggable="true" class="box navy"></div>
             <div id="box2" draggable="true" class="box red"></div>
         </div>
-        
+        <div data-drop-target="true"></div>
+
+        <script>
+            function handleDragStart(e)
+            {
+                e.dataTransfer.setData("text", this.id);
+            }
+
+            function handleDragEnterLeave(e)
+            {
+                if (e.type == "dragcenter")
+                {
+                    this.className = "drag-enter";
+                }
+                else
+                {
+                    this.className = "";
+                }
+            }
+
+            function handleOverDrop(e)
+            {
+                e.preventDefault();
+
+                if (e.type != "drop")
+                {
+                    return;
+                }
+
+                var draggedId = e.dataTransfer.getData("text");
+                var draggedEl = document.getElementById(draggedId);
+
+                if (draggedEl.parentNode == this)
+                {
+                    return;
+                }
+
+                draggedEl.parentNode.removeChild(draggedEl);
+
+                this.appendChild(draggedEl);
+                this.className = "";
+            }
+
+            var draggable = document.querySelectorAll("[draggable]");
+            var targets = document.querySelectorAll("[data-drop-target]");
+
+            for (var i = 0; i < draggable.length; i++)
+            {
+                draggable[i].addEventListener("dragstart", handleDragStart);
+            }
+
+            for (var i = 0; i < targets.length; i++)
+            {
+                targets[i].addEventListener("dragover", handleOverDrop);
+                targets[i].addEventListener("drop", handleOverDrop);
+                targets[i].addEventListener("dragenter", handleDragEnterLeave);
+                targets[i].addEventListener("dragleave", handleDragEnterLeave);
+            }
+        </script>
     </body>
 </html>
